--- a/roles/joe-speedboat.guacamole/vars/main.yml
+++ b/roles/joe-speedboat.guacamole/vars/main.yml
@@ -6,7 +6,7 @@ tomcat_conf: /etc/tomcat/tomcat.conf
 
 guacamole_packages_EL:
   - {package: "ca-certificates"}
-  - {package: "cairo-devel"}
+  #- {package: "cairo-devel"}
   - {package: "freerdp-devel"}
   - {package: "ghostscript"}
   - {package: "java-1.8.0-openjdk"}
@@ -42,4 +42,3 @@ guacamole_packages_EL:
 nginx_packages_EL:
   - {package: "nginx"}
   - {package: "openssl"}
-
