--- a/roles/joe-speedboat.guacamole/tasks/install-packages-redhat.yml
+++ b/roles/joe-speedboat.guacamole/tasks/install-packages-redhat.yml
@@ -1,10 +1,19 @@
 ---
 # tasks file for joe-speedboat.guacamole
 
-- name: Install epel repository
+#- name: Install epel repository
+#  yum:
+#    name: epel-release
+#    state: present
+
+- name: Install EPEL
   yum:
-    name: epel-release
+    name: "https://dl.fedoraproject.org/pub/epel/epel-release-latest-{{ ansible_distribution_major_version }}.noarch.rpm"
     state: present
+  register: install_epel
+  until: install_epel|success
+  delay: 3
+  retries: 5
 
 - name: Add necessary repository
   yum:
@@ -15,14 +24,14 @@
   rpm_key:
     key: /etc/pki/rpm-gpg/RPM-GPG-KEY-nux.ro
 
-- name: Install rpmfusion repository
-  yum:
-    name: "{{ item }}"
-    validate_certs: no
-    disable_gpg_check: yes
-  with_items:
-    - https://download1.rpmfusion.org/free/el/rpmfusion-free-release-7.noarch.rpm
-    - https://download1.rpmfusion.org/nonfree/el/rpmfusion-nonfree-release-7.noarch.rpm
+#- name: Install rpmfusion repository
+#  yum:
+#    name: "{{ item }}"
+#    validate_certs: no
+#    disable_gpg_check: yes
+#  with_items:
+#    - https://download1.rpmfusion.org/free/el/rpmfusion-free-release-7.noarch.rpm
+#    - https://download1.rpmfusion.org/nonfree/el/rpmfusion-nonfree-release-7.noarch.rpm
 
 - name: Install necessary packages
   yum:
