--- a/install_guacamole.yml
+++ b/install_guacamole.yml
@@ -45,13 +45,13 @@
 
   - name: open https port on firewalld
     firewalld:
-      port: "{{ item }}"/tcp
+      port: "{{ item }}"
       permanent: true
       state: enabled
     with_items:
-      - 8080
-      - 8081
-      - 8000
+      - 8080/tcp
+      - 8081/tcp
+      - 8000/tcp
 
   - name: enable firewalld
     service:
